<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:android_custom="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/bluegreen"
    android:orientation="vertical" >

    <include
        android:id="@+id/toptitle"
        layout="@layout/include_back"
        android:layout_width="match_parent"
        android:layout_height="@dimen/title_height" />

    <LinearLayout
        style="@style/padding_margin_style"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/et_rect"
        android:gravity="center"
        android:orientation="vertical" >

        <com.iframe.view.ClearEditText
            android:id="@+id/fgpwd_phone_input"
            style="@style/edit_text"
            android:layout_width="match_parent"
            android:layout_height="@dimen/title_height"
            android:hint="@string/fgpwd_phone"
            android:inputType="phone"
            android:maxLength="11"
            android:padding="0dp" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1px"
            android:background="@color/gray" />

        <com.iframe.view.ClearEditText
            android:id="@+id/fgpwd_real_input"
            style="@style/edit_text"
            android:layout_width="match_parent"
            android:layout_height="@dimen/title_height"
            android:hint="@string/fgpwd_real"
            android:padding="0dp" />




        <View
            android:layout_width="match_parent"
            android:layout_height="1px"
            android:background="@color/gray" />

        <com.iframe.view.ClearEditText
            android:id="@+id/fgpwd_id_input"
            style="@style/edit_text"
            android:layout_width="match_parent"
            android:layout_height="@dimen/title_height"
            android:hint="@string/fgpwd_id"
            android:padding="0dp" />
        <View
            android:layout_width="match_parent"
            android:layout_height="1px"
            android:background="@color/gray" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/title_height"
            android:orientation="horizontal" >

            <com.iframe.view.ClearEditText
                android:id="@+id/fgpwd_img_input"
                style="@style/edit_text"
                android:layout_width="0dp"
                android:layout_height="@dimen/title_height"
                android:layout_weight="5"
                android:hint="@string/regesiter_user_code"
                android:inputType="numberSigned"
                android:maxLength="6"
                android:padding="0dp" />

            <ImageView
                android:id="@+id/fgpwd_img"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_gravity="center_vertical"/>
        </LinearLayout>
    </LinearLayout>

    <Button
        android:id="@+id/fgpwd_btn"
        style="@style/orange_button"
        android:layout_width="match_parent"
        android:layout_height="@dimen/title_height"
        android:text="@string/fgpwd_btn" />

</LinearLayout>