<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/bluegreen">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <RelativeLayout
            android:id="@+id/ll_unlogin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin"
            android:layout_marginRight="@dimen/margin">
            <ImageView
                android:layout_height="30dp"
                android:id="@+id/btn_back"
                android:layout_alignParentLeft="true"
                android:layout_marginRight="5dp"
                android:layout_marginLeft="5dp"
                android:layout_marginTop="5dp"
                android:layout_marginBottom="5dp"
                android:layout_width="@dimen/back_width"
                android:clickable="true"
                android:onClick="back"
                android:src="@drawable/back_gray"
                android:scaleType="centerInside"

                />


            <ImageView
                android:id="@+id/img_setting"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/icon_gear"
                android:layout_marginRight="5dp"
                android:layout_marginLeft="5dp"
                android:layout_marginTop="5dp"
                android:layout_marginBottom="5dp"
                android:layout_alignParentRight="true"
                />


        </RelativeLayout>

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginBottom="50dp"
            android:layout_marginTop="50dp"
            android:src="@drawable/img_login"/>

        <LinearLayout
            style="@style/padding_margin_style"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/et_rect"
            android:orientation="vertical" >

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal" >

                <TextView
                    style="@style/login_label"
                    android:layout_width="@dimen/login_label_width"
                    android:layout_height="@dimen/title_height"
                    android:text="@string/login_account_label" />

                <com.iframe.view.ClearEditText
                    android:id="@+id/et_login_account"
                    style="@style/edit_text"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/title_height"
                    android:hint="@string/login_user_hintname"
                    android:imeOptions="actionNext"
                    android:nextFocusForward="@+id/et_login_password" />
            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="1px"
                android:layout_marginLeft="@dimen/login_label_width"
                android:background="@color/gray" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="horizontal" >

                <TextView
                    style="@style/login_label"
                    android:layout_width="@dimen/login_label_width"
                    android:layout_height="@dimen/title_height"
                    android:text="@string/login_password_label" />

                <com.iframe.view.ClearEditText
                    android:id="@+id/et_login_password"
                    style="@style/edit_text"
                    android:layout_width="match_parent"
                    android:layout_height="@dimen/title_height"
                    android:hint="@string/login_user_hintpwd"
                    android:imeOptions="actionDone"
                    android:inputType="textPassword" />
            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="1px"
                android:layout_marginLeft="@dimen/login_label_width"
                android:background="@color/gray"
                android:visibility="gone" />

            <!--<LinearLayout-->
                <!--android:id="@+id/layout_logincode"-->
                <!--android:layout_width="match_parent"-->
                <!--android:layout_height="match_parent"-->
                <!--android:orientation="horizontal"-->
                <!--android:visibility="gone" >-->

                <!--<TextView-->
                    <!--style="@style/login_label"-->
                    <!--android:layout_width="@dimen/login_label_width"-->
                    <!--android:layout_height="@dimen/title_height"-->
                    <!--android:text="@string/login_password_code" />-->

                <!--<EditText-->
                    <!--android:id="@+id/et_login_code"-->
                    <!--style="@style/edit_text"-->
                    <!--android:layout_width="0dp"-->
                    <!--android:layout_height="@dimen/title_height"-->
                    <!--android:layout_weight="3"-->
                    <!--android:hint="@string/login_user_hintcode"-->
                    <!--android:imeOptions="actionDone" />-->

                <!--<com.idwzx.view.TextImageButton-->
                    <!--android:id="@+id/img_code"-->
                    <!--android:layout_width="0dp"-->
                    <!--android:layout_height="35dp"-->
                    <!--android:layout_gravity="center_vertical"-->
                    <!--android:layout_marginLeft="10dp"-->
                    <!--android:layout_weight="2"-->
                    <!--android:background="@color/lightgray"-->
                    <!--android_custom:ibText="获取验证码"-->
                    <!--android_custom:ibTextColor="@color/white"-->
                    <!--android_custom:ibTextSize="15sp" />-->
            <!--</LinearLayout>-->
        </LinearLayout>
        <ImageView
            android:id="@+id/login_img"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="70dp"
            android:visibility="gone"/>

        <Button
            android:id="@+id/login_btn"
            style="@style/Widget.AppCompat.Button.Colored"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginTop="30dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:text="@string/login_btn"/>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingLeft="70dp"
            android:paddingRight="70dp">

            <Button
                android:id="@+id/login_regist_btn"
                style="@style/Widget.AppCompat.Button.Borderless.Colored"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:text="@string/login_regist_btn"/>

            <Button
                android:id="@+id/login_forget_btn"
                style="@style/Widget.AppCompat.Button.Borderless.Colored"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:text="@string/login_forget_btn"/>
        </RelativeLayout>

    </LinearLayout>
</ScrollView>